--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,11 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Environment files (NEVER upload to GitHub!)
+.env
+.env.local
+.env.*.local
+
 # Diagnostic tools
 .qodo
 
